# SNN_Ethos_U55

./: README.md  batched_Get_output_spik_mnist_get_params.ipynb  exe_time_breakdown.csv  inference_exe_time_breakdown.csv  plot_exe_time_sections.py  power_measurement.csv  results.txt  section_exe_time.csv
SNN_model/: LIF_model_tf.py  get_tflite_vela.sh
SNN_model/saved_models/TF_model/: fingerprint.pb
SNN_model/saved_models/tflite_model/: tflite_model.tflite
ethosu_compiler/: README.md  my_translator.py  register_command_stream_generator.py  requirements.txt  run_compiler.sh
ethosu_compiler/command_stream/: conv2d_translated.hpp  maxpool2d.txt  maxpool2d_translated.hpp  maxpool_vela.txt  maxpool_vela_translated.hpp  maxpool_vela_translated_double_check.hpp
ethosu_compiler/gen_cms/: cms_interpreter.py  common.py  compute_dcache_time.py  config_ops.py  constants.py  data_structs.py  decompile.py  define_op.py  extend_weights.py  extra_func.py  fc_lif.py  funcs_for_npu_op_gen.py  gameplan.txt  main.py  main_repeat_weights.py  mem_u_int16.py  mem_u_int8.py  my_mem_u.c  nmnist_write_test_patterns_to_h_file.py  plot_mem_traces.py  retrieve_params_and_patterns.py  retrieve_params_and_patterns.sh  tmp_out.c  update_all_fc_lif.py  write_connectivity_h_file.py  write_layer_files.py  write_test_patterns_to_h_file.py
ethosu_compiler/gen_cms/784x48^20x10/: config_file.py
ethosu_compiler/gen_cms/784x48x48x48x48x10/: config_file.py
ethosu_compiler/output/: conv2d_doc_ex_translated.hpp  conv2d_my_translated.hpp  conv2d_only_vela_test_translated.hpp  conv2d_translated.hpp  testing_translated.hpp
ethosu_compiler/plots_and_calculations/: plot_mem_traces.py
ethosu_compiler/src/: main.py  vela.py
measurement_results/: compute_theoretical_energy.py
measurement_results/csv_results/: repeating_models_exe_time.csv  repeating_models_power_consumption.csv  repeating_models_update_expected_num_layers_to_compute.csv  repeating_models_update_rate.csv
measurement_results/plotting_scripts/: plot_cache_results.py  plot_layer_update_results.py  plot_repeating_exe_time.py  plot_repeating_power_consumption.py  plot_update_rate.py  tmp_plot_repeating_power_consumption.py
power_measurements/: compute_theoretical_energy.py  plot_results.py
power_measurements/csv_results/: repeating_models_exe_time.csv  repeating_models_exe_time_both.csv  repeating_models_update_expected_num_layers_to_compute.csv
power_measurements/plotting_scripts/: plot_exe_time.py  plot_update_rate.py
python_models/add_test/: compile_output.txt  get_tflite_vela.sh  simple_model.py  tf_2_tflite.py
python_models/conv2d_test/: compile_printout.txt  get_tflite_vela.sh  see_main_split_1_flash.py  simple_model.py
python_models/matmul_test/: compile_output.txt  gen_matmul_model.py  get_tflite_vela.sh  mat_mul.py  model_quantized.tflite  tmp.py
python_models/maxpool2d_test/: get_tflite_vela.sh  simple_model.py  tf_2_tflite.py
python_models/membrane_update_test/: compile_output.txt  gen_matmul_model.py  get_tflite_vela.sh
python_models/snn_model/: LIF_model_tf.py  test_model.c  test_model.py  tmp.txt
python_models/yolo_v4/: compile_output.txt  main_split_1_flash  main_split_1_flash.txt  see_main_split_1_flash.py
saved_models/TF_model/: saved_model.pb
snn_model/: get_tflite_vela.sh  tf_2_tflite.py
snn_models/: README.md  compare_float.py  compare_output.py  file1.txt  file2.txt
snn_models/n_mnist_qat_snn/: estimate_num_params.py  model.py  model_state_dict.pkl  net.py  plot_correctness_heatmap.py  plot_mem_traces.py  pred_vs_target.py  store_all_params.sh  store_model_params.py  test.py  test_by_build_model_from_npy.py  train_all.sh
snn_models/net/: model_state_dict.pkl  net.py  output.txt
snn_models/rate_encoding_mnist_snn/: store_model_params.py  train.py
snn_models/spk_mnist_mlp/: model.py  run_test_patterns.py  store_model_params.py
snn_on_alif_e7/: README.md  build_n_run.ps1  mlek.cbuild-idx.yml  mlek.cbuild-pack.yml  mlek.cbuild-set.yml  mlek.csolution.yml  output.txt  python_build_n_run.ps1  vcpkg-configuration.json
snn_on_alif_e7/common/: common.clayer.yml
snn_on_alif_e7/custom_edits/: open_files_to_edit.ps1  tmp_ethos_driver.c
snn_on_alif_e7/eval_results/: check_npu_op_time.ps1  max_blk_size.csv  max_blk_size_all_op_weights_and_params_on_mram.csv  max_blk_size_zero_weights.csv  no_activation_max_blk_size_zero_weights.csv  plot_csv.py  plot_multi_csv.py  read_n_store_results.ps1  squared_dims_max_blk_size.csv
snn_on_alif_e7/float_int16/: .clangd  float_int16.cproject.yml  float_int16.debug+Alif-E7-M55-HP.cbuild.yml  float_int16.release+Alif-E7-M55-HP.cbuild.yml
snn_on_alif_e7/my_snn_bare_metal/: my_snn_bare_metal.cproject.yml  my_snn_bare_metal.debug+Alif-E7-M55-HP.cbuild.yml
snn_on_alif_e7/scripts/: current_recording_20250627_193556.csv  current_recording_20250627_193756.csv  current_recording_20250627_193956.csv  current_recording_20250627_194156.csv  current_recording_20250627_194351.csv  current_recording_20250627_194554.csv  current_recording_20250627_194752.csv  current_recording_20250627_194953.csv  edit_cproject_file.py  inference_and_current.csv  python_build_n_run.ps1  read_com7.ps1  sweep_repeating_python_build_n_run.ps1  tmp_uart_current_monitor.py  uart_current_monitor.py
snn_on_alif_e7/simple_code_test/: .clangd  simple_code_test.cproject.yml  simple_code_test.debug+Alif-E7-M55-HP.cbuild.yml  simple_code_test.release+Alif-E7-M55-HP.cbuild.yml
snn_on_alif_e7/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
snn_on_alif_e7/tmp/simple_code_test.debug+Alif-E7-M55-HP/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
snn_on_alif_e7/tmp/simple_code_test.debug+Alif-E7-M55-HP/src/simple_code_test.debug+Alif-E7-M55-HP-stamp/: simple_code_test.debug+Alif-E7-M55-HP-configure-.cmake  simple_code_test.debug+Alif-E7-M55-HP-source_dirinfo.txt
snn_on_alif_e7/tmp/simple_code_test.debug+Alif-E7-M55-HP/tmp/: simple_code_test.debug+Alif-E7-M55-HP-cfgcmd.txt  simple_code_test.debug+Alif-E7-M55-HP-mkdirs.cmake
(+1866 files in other folders)
